[package]
name = "github"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"

[[example]]
name = "test_api"
path = "examples/test_api.rs"
