[package]
name = "github"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[dev-dependencies]
mockito = "1.2"

[[example]]
name = "test_api"
path = "examples/test_api.rs"

[[example]]
name = "branch_creation"
path = "examples/branch_creation.rs"
